# django-nepali-datetime-field

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
example_app/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
example_app/migrations/: 0001_initial.py
example_app/templates/example_app/: example_create.html  example_list.html
nepali_datetime_field/: __init__.py  apps.py  forms.py  models.py
nepali_datetime_field/static/nepali_datetime_field/: init.js
nepali_datetime_field/templates/nepali_datetime_field/forms/widgets/: nepali_date.html
nepali_datetime_field/templatetags/: nepali_datetime_field.py
