[metadata]
name = django-nepali-datetime-field
version = 0.4
description = Django nepali datetime helpers.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Amit Garu
author_email = amitgaru2@gmail.com
url = https://github.com/dxillar/django-nepali-datetime-field
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    nepali_datetime

[options.packages.find]
exclude =
    example_app
    example_app.*
